--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
 
     <nav>
     </nav>
+
+    <main class="container">
+        <div class="box1"></div>
+        <div class="boxleft"></div>
+        <div class="center"></div>
+        <div class="boxright"></div>
+    </main>
 </body>
 </html>
