--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <div class="center"></div>
         <div class="boxright"></div>
     </main>
+
+    <footer>
+    </footer>
 </body>
 </html>
